[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/CardTable/CardTable.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/Organism.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/CardTable/ChromosomeStatus.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Images/icons/collapse_dupes.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/icons/copy_repair.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/icons/join_ends.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/icons/mitosis.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/icons/meiosis.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/icons/skip_rep.png" type="Texture" id=9]
[ext_resource path="res://Scripts/CardTable/pnl_saveload.gd" type="Script" id=10]
[ext_resource path="res://Scripts/CardTable/pnl_ph_filter.gd" type="Script" id=11]
[ext_resource path="res://Scenes/WorldMap/MineralLevels.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/WorldMap/CFPBank.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/WorldMap/EnergyBar.tscn" type="PackedScene" id=14]

[node name="CardTable" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="lbl_turn" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -397.0
margin_top = -92.0
margin_right = -160.0
align = 2
valign = 1
autowrap = true

[node name="lbl_justnow" type="RichTextLabel" parent="."]
margin_left = 510.0
margin_top = 670.0
margin_right = 1110.0
margin_bottom = 870.0
bbcode_enabled = true
scroll_following = true

[node name="sc_criteria" type="ScrollContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -476.0
margin_top = -275.0
margin_right = -144.0
margin_bottom = -75.0
rect_min_size = Vector2( 320, 200 )
scroll_horizontal_enabled = false

[node name="lbl_criteria" type="Label" parent="sc_criteria"]
margin_right = 320.0
margin_bottom = 180.0
rect_min_size = Vector2( 320, 180 )
align = 1
valign = 1
autowrap = true

[node name="button_grid" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -132.0
margin_top = 647.0
margin_right = -10.0
margin_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 20
alignment = 2

[node name="btn_dead_menu" type="Button" parent="button_grid"]
visible = false
margin_right = 122.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
text = "Quit to Menu"

[node name="btn_dead_restart" type="Button" parent="button_grid"]
visible = false
margin_top = 80.0
margin_right = 122.0
margin_bottom = 140.0
rect_min_size = Vector2( 120, 60 )
text = "Restart"

[node name="hsep_dead" type="HSeparator" parent="button_grid"]
visible = false
margin_top = 160.0
margin_right = 122.0
margin_bottom = 164.0

[node name="btn_saveload" type="Button" parent="button_grid"]
margin_top = 24.0
margin_right = 122.0
margin_bottom = 84.0
rect_min_size = Vector2( 120, 60 )
text = "Save/Load"

[node name="btn_filter" type="Button" parent="button_grid"]
margin_top = 104.0
margin_right = 122.0
margin_bottom = 164.0
rect_min_size = Vector2( 120, 60 )
text = "pH Effectiveness"

[node name="btn_nxt" type="Button" parent="button_grid"]
margin_top = 184.0
margin_right = 122.0
margin_bottom = 244.0
rect_min_size = Vector2( 120, 60 )
text = "Continue"

[node name="Organism" parent="." instance=ExtResource( 2 )]

[node name="ChromosomeStatus" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -786.519
margin_top = 577.836
margin_right = 313.481
margin_bottom = 639.836
rect_min_size = Vector2( 0, 50 )

[node name="pnl_repair_choices" type="Panel" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -250.0
margin_right = 280.0
margin_bottom = -20.0
__meta__ = {
"_edit_group_": true
}

[node name="hsplit" type="HSplitContainer" parent="pnl_repair_choices"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 15.0
margin_right = -6.0
margin_bottom = -14.0
split_offset = 230
dragger_visibility = 1

[node name="ilist_choices" type="ItemList" parent="pnl_repair_choices/hsplit"]
margin_right = 230.0
margin_bottom = 201.0
items = [ "Collapse Duplicates", ExtResource( 4 ), false, "Copy Pattern", ExtResource( 5 ), false, "Join Ends", ExtResource( 6 ), false ]
same_column_width = true
fixed_icon_size = Vector2( 50, 50 )

[node name="vsplit" type="VSplitContainer" parent="pnl_repair_choices/hsplit"]
margin_left = 242.0
margin_right = 554.0
margin_bottom = 201.0
split_offset = 127
dragger_visibility = 1

[node name="scroll" type="ScrollContainer" parent="pnl_repair_choices/hsplit/vsplit"]
margin_right = 312.0
margin_bottom = 127.0
scroll_horizontal_enabled = false

[node name="lbl_choice_desc" type="Label" parent="pnl_repair_choices/hsplit/vsplit/scroll"]
margin_right = 295.0
margin_bottom = 235.0
rect_min_size = Vector2( 295, 0 )
text = "This is a big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long text."
autowrap = true

[node name="btn_apply_repair" type="Button" parent="pnl_repair_choices/hsplit/vsplit"]
margin_top = 139.0
margin_right = 312.0
margin_bottom = 201.0
text = "Repair"

[node name="pnl_reproduce" type="Panel" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -250.0
margin_right = 280.0
margin_bottom = -20.0
__meta__ = {
"_edit_group_": true
}

[node name="hsplit" type="HSplitContainer" parent="pnl_reproduce"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 15.0
margin_right = -6.0
margin_bottom = -14.0
split_offset = 230
dragger_visibility = 1

[node name="ilist_choices" type="ItemList" parent="pnl_reproduce/hsplit"]
margin_right = 230.0
margin_bottom = 201.0
items = [ "Mitosis", ExtResource( 7 ), false, "Meiosis", ExtResource( 8 ), false, "Skip", ExtResource( 9 ), false ]
same_column_width = true
fixed_icon_size = Vector2( 50, 50 )

[node name="vsplit" type="VSplitContainer" parent="pnl_reproduce/hsplit"]
margin_left = 242.0
margin_right = 554.0
margin_bottom = 201.0
split_offset = 127
dragger_visibility = 1

[node name="scroll" type="ScrollContainer" parent="pnl_reproduce/hsplit/vsplit"]
margin_right = 312.0
margin_bottom = 127.0
scroll_horizontal_enabled = false

[node name="lbl_choice_desc" type="Label" parent="pnl_reproduce/hsplit/vsplit/scroll"]
margin_right = 295.0
margin_bottom = 235.0
rect_min_size = Vector2( 295, 0 )
text = "This is a big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long big long text."
autowrap = true

[node name="btn_apply_replic" type="Button" parent="pnl_reproduce/hsplit/vsplit"]
margin_top = 139.0
margin_right = 312.0
margin_bottom = 201.0
text = "Reproduce"

[node name="pnl_saveload" type="Panel" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 262.0
margin_top = -217.0
margin_right = 776.0
margin_bottom = 208.0
script = ExtResource( 10 )

[node name="btn_load" type="Button" parent="pnl_saveload"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -123.0
margin_top = -36.0
margin_right = -3.0
margin_bottom = -6.0
text = "Load"

[node name="tbox_load" type="LineEdit" parent="pnl_saveload"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -66.0
margin_bottom = -42.0

[node name="tbox_save" type="TextEdit" parent="pnl_saveload"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -90.0
mouse_default_cursor_shape = 0
readonly = true
show_line_numbers = true

[node name="pnl_ph_filter" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 142.0
margin_top = 261.0
margin_right = 656.0
margin_bottom = 397.0
script = ExtResource( 11 )

[node name="slider_ph" type="HSlider" parent="pnl_ph_filter"]
anchor_right = 1.0
margin_left = 42.0
margin_top = 70.0
margin_right = -42.0
margin_bottom = 86.0
max_value = 14.0
step = 0.25
value = 7.0
tick_count = 15
ticks_on_borders = false

[node name="current_ph" type="ColorRect" parent="pnl_ph_filter/slider_ph"]
editor/display_folded = true
show_behind_parent = true
margin_left = 212.0
margin_top = -20.0
margin_right = 217.0
margin_bottom = 25.0
color = Color( 0.596078, 0.596078, 0.596078, 1 )

[node name="lbl" type="Label" parent="pnl_ph_filter/slider_ph/current_ph"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -34.5
margin_top = -31.0
margin_right = 34.5
text = "Current pH
7.00"
align = 1

[node name="lbl_slider_value" type="Label" parent="pnl_ph_filter"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.0
margin_top = 97.0
margin_right = 25.0
margin_bottom = 116.0
text = "7.00"
align = 1
valign = 1
clip_text = true

[node name="MineralLevels" parent="." instance=ExtResource( 12 )]
margin_left = 139.563
margin_top = 731.388
margin_right = -1195.44
margin_bottom = -40.6124

[node name="CFPBank" parent="." instance=ExtResource( 13 )]
margin_left = 11.5742
margin_top = 686.729
margin_right = -1588.43
margin_bottom = -213.271
rect_scale = Vector2( 0.8, 0.75 )

[node name="EnergyBar" parent="." instance=ExtResource( 14 )]
margin_left = 11.894
margin_top = 643.426
margin_right = -988.106
margin_bottom = -196.574
rect_scale = Vector2( 0.8, 0.75 )

[node name="AutoContinue" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
[connection signal="pressed" from="button_grid/btn_dead_menu" to="." method="_on_btn_dead_menu_pressed"]
[connection signal="pressed" from="button_grid/btn_dead_restart" to="." method="_on_btn_dead_restart_pressed"]
[connection signal="pressed" from="button_grid/btn_saveload" to="." method="_on_btn_saveload_pressed"]
[connection signal="pressed" from="button_grid/btn_filter" to="." method="_on_btn_filter_pressed"]
[connection signal="pressed" from="button_grid/btn_nxt" to="." method="_on_btn_nxt_pressed"]
[connection signal="cmsm_changed" from="Organism" to="ChromosomeStatus" method="update"]
[connection signal="died" from="Organism" to="." method="_on_Organism_died"]
[connection signal="doing_work" from="Organism" to="." method="_on_Organism_doing_work"]
[connection signal="energy_changed" from="Organism" to="." method="_on_Organism_energy_changed"]
[connection signal="finished_replication" from="Organism" to="." method="_on_Organism_finished_replication"]
[connection signal="justnow_update" from="Organism" to="." method="_on_Organism_justnow_update"]
[connection signal="resources_changed" from="Organism" to="." method="_on_Organism_resources_changed"]
[connection signal="show_repair_opts" from="Organism" to="." method="_on_Organism_show_repair_opts"]
[connection signal="show_reprod_opts" from="Organism" to="." method="_on_Organism_show_reprod_opts"]
[connection signal="updated_gaps" from="Organism" to="." method="_on_Organism_updated_gaps"]
[connection signal="item_activated" from="pnl_repair_choices/hsplit/ilist_choices" to="." method="_on_ilist_choices_item_activated"]
[connection signal="item_selected" from="pnl_repair_choices/hsplit/ilist_choices" to="." method="upd_repair_desc"]
[connection signal="pressed" from="pnl_repair_choices/hsplit/vsplit/btn_apply_repair" to="." method="_on_btn_apply_repair_pressed"]
[connection signal="item_activated" from="pnl_reproduce/hsplit/ilist_choices" to="." method="_on_replic_choices_item_activated"]
[connection signal="item_selected" from="pnl_reproduce/hsplit/ilist_choices" to="." method="upd_replicate_desc"]
[connection signal="pressed" from="pnl_reproduce/hsplit/vsplit/btn_apply_replic" to="." method="_on_btn_apply_replic_pressed"]
[connection signal="loaded" from="pnl_saveload" to="." method="_on_pnl_saveload_loaded"]
[connection signal="pressed" from="pnl_saveload/btn_load" to="pnl_saveload" method="_on_btn_load_pressed"]
[connection signal="update_seqelm_coloration" from="pnl_ph_filter" to="." method="_on_pnl_ph_filter_update_seqelm_coloration"]
[connection signal="visibility_changed" from="pnl_ph_filter" to="pnl_ph_filter" method="_on_pnl_ph_filter_visibility_changed"]
[connection signal="value_changed" from="pnl_ph_filter/slider_ph" to="pnl_ph_filter" method="_on_slider_ph_value_changed"]
[connection signal="resource_clicked" from="CFPBank" to="." method="_on_CFPBank_resource_clicked"]
[connection signal="timeout" from="AutoContinue" to="." method="_on_AutoContinue_timeout"]
